--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -7,8 +7,8 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
 
     {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/vendor.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/admin.css') }}">
+        <link rel="stylesheet" href="{{ asset('bundles/creonitadmin/css/vendor.css') }}">
+        <link rel="stylesheet" href="{{ asset('bundles/creonitadmin/css/admin.css') }}">
     {% endblock %}
 
     <!-- Font Awesome -->
@@ -514,9 +514,9 @@
 
 
 {% block javascripts %}
-    <script src="{{ asset('js/vendor.js') }}"></script>
-    <script src="{{ asset('js/admin.js') }}"></script>
-    <script src="{{ asset('js/common.js') }}"></script>
+    <script src="{{ asset('bundles/creonitadmin/js/vendor.js') }}"></script>
+    <script src="{{ asset('bundles/creonitadmin/js/admin.js') }}"></script>
+    <script src="{{ asset('bundles/creonitadmin/js/common.js') }}"></script>
 {% endblock %}
 
 </body>
