--- a/src/Resources/views/Layout/menu.html.twig
+++ b/src/Resources/views/Layout/menu.html.twig
@@ -1,10 +1,12 @@
-{% for module in admin.getModules %}
+<ul class="nav nav-sidebar">
+    {% for module in admin.getModules %}
 
-    <li {{ module.isActive ? 'class="active"' }}>
-        <a href="{{ url('creonit_admin_module', {module: module.getUri}) }}">
-            <i class="{{ module.getIcon }}"></i>
-            <span>{{ module.getTitle }}</span>
-        </a>
-    </li>
+        <li {{ module.isActive ? 'class="active"' }}>
+            <a href="{{ url('creonit_admin_module', {module: module.getUri}) }}">
+                <i class="{{ module.getIcon }}"></i>
+                <span>{{ module.getTitle }}</span>
+            </a>
+        </li>
 
-{% endfor %}
+    {% endfor %}
+</ul>
