--- a/assets/css/admin/_modal.styl
+++ b/assets/css/admin/_modal.styl
@@ -40,3 +40,40 @@
    background-color rgba(black, .5) !important
    opacity 1 !important
 }
+
+
+.modal-content{
+   border 1px solid rgba(black, .4)
+}
+
+.modal-header{
+   box-shadow 0 3px 1px rgba(black, .1)
+   position relative
+   z-index 1
+   background #337ab7
+   color white
+   border-bottom-color darken(@background, 20%)
+
+   .close{
+      font-size 25px
+      opacity .3
+
+      &:hover{
+         opacity .6
+      }
+   }
+}
+
+.modal-title{
+   font-size 15px
+}
+
+.modal-body{
+   background #f5f5f5
+}
+
+.modal-footer{
+   text-align left
+   box-shadow 0 -3px 1px rgba(black, .02)
+   position relative
+}
