--- a/src/Resources/views/Layout/header.html.twig
+++ b/src/Resources/views/Layout/header.html.twig
@@ -1,7 +1,1 @@
-<h1>{{ module.title }}</h1>
-{#
-<ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-    <li class="active">Dashboard</li>
-</ol>
-#}
+<h1 class="sub-header">{{ module.title }}</h1>
