--- a/assets/css/admin/#body.styl
+++ b/assets/css/admin/#body.styl
@@ -7,6 +7,7 @@ include-font('Proxima Nova', proxima_nova_light, 300)
 include-font('Proxima Nova', proxima_nova_light_italic, 300, italic)
 
 
+
 .btn-group,
 .btn-group-vertical{
    white-space nowrap
@@ -15,4 +16,11 @@ include-font('Proxima Nova', proxima_nova_light_italic, 300, italic)
       float none
       display inline-block
    }
+}
+
+.control-label-notice{
+   font-size .85em
+   font-weight normal
+   color #999
+   margin-left .75em
 }
