--- a/src/Resources/views/Default/module.html.twig
+++ b/src/Resources/views/Default/module.html.twig
@@ -1,7 +1,7 @@
 {% extends 'CreonitAdminBundle::layout.html.twig' %}
 
 {% block content %}
-    {% include module.template %}
+    {{ module.template | raw }}
 {% endblock %}
 
 
