--- a/src/Resources/public/css/admin.css
+++ b/src/Resources/public/css/admin.css
@@ -50,9 +50,6 @@
 .modal-title {
   font-size: 15px;
 }
-.modal-body {
-  background: #f5f5f5;
-}
 .modal-footer {
   text-align: left;
   box-shadow: 0 -3px 1px rgba(0,0,0,0.02);
@@ -66,6 +63,12 @@
 .btn-group-vertical > .btn {
   float: none;
   display: inline-block;
+}
+.control-label-notice {
+  font-size: 0.85em;
+  font-weight: normal;
+  color: #999;
+  margin-left: 0.75em;
 }
 body {
   padding-top: 50px;
