--- a/assets/css/admin/#body.styl
+++ b/assets/css/admin/#body.styl
@@ -8,6 +8,10 @@ include-font('Proxima Nova', proxima_nova_light_italic, 300, italic)
 
 
 
+.mce-panel{
+   border-color #ccc !important
+}
+
 .btn-group,
 .btn-group-vertical{
    white-space nowrap
