delete, visible, gallery

--- a/assets/css/admin/#body.styl
+++ b/assets/css/admin/#body.styl
@@ -28,3 +28,14 @@ include-font('Proxima Nova', proxima_nova_light_italic, 300, italic)
    color #999
    margin-left .75em
 }
+
+.table-row-visible{
+
+   &:not(.mod-visible){
+      opacity .3
+   }
+}
+
+.modal-footer{
+
+}
