--- a/src/Resources/public/css/admin.css
+++ b/src/Resources/public/css/admin.css
@@ -73,6 +73,9 @@
   color: #999;
   margin-left: 0.75em;
 }
+.table-row-visible:not(.mod-visible) {
+  opacity: 0.3;
+}
 body {
   padding-top: 50px;
 }
