delete, visible, gallery

--- a/assets/css/admin/_modal.styl
+++ b/assets/css/admin/_modal.styl
@@ -76,4 +76,9 @@
    text-align left
    box-shadow 0 -3px 1px rgba(black, .02)
    position relative
+   background white
+
+   &[style]{
+      box-shadow 0 -3px 10px rgba(black, .1)
+   }
 }
