--- a/assets/css/admin/#body.styl
+++ b/assets/css/admin/#body.styl
@@ -37,5 +37,11 @@ include-font('Proxima Nova', proxima_nova_light_italic, 300, italic)
 }
 
 .icon{
-   margin-right 5px
+   margin-right 4px
+}
+
+.table thead th{
+   font-size .85em
+   font-weight normal
+   color #999
 }
