--- a/src/Resources/public/css/admin.css
+++ b/src/Resources/public/css/admin.css
@@ -9,7 +9,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  z-index: 1000;
+  z-index: 1031;
 }
 .arcticmodal-container {
   overflow-y: scroll;
@@ -24,6 +24,9 @@
 .arcticmodal-container_i {
   height: 100%;
   margin: 0 auto;
+}
+.arcticmodal-container_i2 {
+  vertical-align: top;
 }
 .arcticmodal-overlay {
   background-color: rgba(0,0,0,0.5) !important;
@@ -59,6 +62,42 @@
 .modal-footer[style] {
   box-shadow: 0 -3px 10px rgba(0,0,0,0.1);
 }
+.arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container .modal-dialog {
+  padding: 0 15px;
+  margin-top: 45px;
+}
+.arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container .modal-dialog {
+  padding: 0 30px;
+  margin-top: 60px;
+}
+.arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container .modal-dialog {
+  padding: 0 45px;
+  margin-top: 75px;
+}
+.arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container .modal-dialog {
+  padding: 0 60px;
+  margin-top: 90px;
+}
+.arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container .modal-dialog {
+  padding: 0 75px;
+  margin-top: 105px;
+}
+.arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container .modal-dialog {
+  padding: 0 90px;
+  margin-top: 120px;
+}
+.arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container .modal-dialog {
+  padding: 0 105px;
+  margin-top: 135px;
+}
+.arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container .modal-dialog {
+  padding: 0 120px;
+  margin-top: 150px;
+}
+.arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container + .arcticmodal-overlay + .arcticmodal-container .modal-dialog {
+  padding: 0 135px;
+  margin-top: 165px;
+}
 .mce-panel {
   border-color: #ccc !important;
 }
@@ -81,7 +120,12 @@
   opacity: 0.3;
 }
 .icon {
-  margin-right: 5px;
+  margin-right: 4px;
+}
+.table thead th {
+  font-size: 0.85em;
+  font-weight: normal;
+  color: #999;
 }
 body {
   padding-top: 50px;
@@ -102,7 +146,7 @@ body {
     top: 51px;
     bottom: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 500;
     display: block;
     padding: 20px;
     overflow-x: hidden;
