--- a/assets/css/admin/_modal.styl
+++ b/assets/css/admin/_modal.styl
@@ -94,7 +94,7 @@ for num in (2..10) {
    {sel}{
       .modal-dialog{
          padding 0 ((num - 1) * 15)px
-         margin-top ((num + 1) * 15)px
+         margin-top ((num) * 40 - 10)px
       }
    }
 }
