--- a/src/Resources/views/Default/module.html.twig
+++ b/src/Resources/views/Default/module.html.twig
@@ -1,7 +1,8 @@
-{% extends 'AppBundle::admin.html.twig' %}
+{% extends 'CreonitAdminBundle::layout.html.twig' %}
 
 {% block content %}
     {{ module.template | raw }}
 {% endblock %}
 
 
+{% block title %}{{ module.title }} — {{ admin.title }}{% endblock %}
