--- a/src/Resources/public/css/bootstrap.css
+++ b/src/Resources/public/css/bootstrap.css
@@ -5432,7 +5432,7 @@ button.list-group-item-danger.active:focus {
   padding: 15px;
 }
 .panel-heading {
-  padding: 5px;
+  padding: 15px 15px;
   border-bottom: 1px solid transparent;
   border-top-right-radius: 2px;
   border-top-left-radius: 2px;
@@ -5454,7 +5454,7 @@ button.list-group-item-danger.active:focus {
   color: inherit;
 }
 .panel-footer {
-  padding: 5px;
+  padding: 15px 15px;
   background-color: #f5f5f5;
   border-top: 1px solid #ddd;
   border-bottom-right-radius: 2px;
@@ -5660,14 +5660,14 @@ button.list-group-item-danger.active:focus {
 }
 .panel-default > .panel-heading {
   color: #333333;
-  background-color: #f5f5f5;
+  background-color: #eef2f4;
   border-color: #ddd;
 }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #ddd;
 }
 .panel-default > .panel-heading .badge {
-  color: #f5f5f5;
+  color: #eef2f4;
   background-color: #333333;
 }
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
