--- a/assets/css/admin/_modal.styl
+++ b/assets/css/admin/_modal.styl
@@ -60,10 +60,13 @@
 
    .close{
       font-size 25px
-      opacity .3
+      opacity .6
+
+      color darken(white, 30%)
+      text-shadow: 0 1px 0 black;
 
       &:hover{
-         opacity .6
+         opacity .9
       }
    }
 }
@@ -73,7 +76,14 @@
 }
 
 .modal-body{
-   //background #f5f5f5
+
+   &.mod-table{
+      padding 0
+
+      .panel{
+         margin-bottom 0
+      }
+   }
 }
 
 .modal-footer{
