--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -704,7 +704,7 @@
 
 @panel-bg:                    #fff;
 @panel-body-padding:          15px;
-@panel-heading-padding:       5px;
+@panel-heading-padding:       15px 15px;
 @panel-footer-padding:        @panel-heading-padding;
 @panel-border-radius:         @border-radius-base;
 
@@ -714,7 +714,8 @@
 
 @panel-default-text:          @gray-dark;
 @panel-default-border:        #ddd;
-@panel-default-heading-bg:    #f5f5f5;
+//@panel-default-heading-bg:    #f5f5f5;
+@panel-default-heading-bg:    lighten(#222d32, 78%);
 
 @panel-primary-text:          #fff;
 @panel-primary-border:        @brand-primary;
