--- a/assets/css/admin/_modal.styl
+++ b/assets/css/admin/_modal.styl
@@ -62,8 +62,6 @@
       font-size 25px
       opacity .6
 
-      color darken(white, 30%)
-      text-shadow: 0 1px 0 black;
 
       &:hover{
          opacity .9
@@ -82,6 +80,7 @@
 
       .panel{
          margin-bottom 0
+         border 0
       }
    }
 }
