--- a/assets/css/admin/layout.styl
+++ b/assets/css/admin/layout.styl
@@ -90,6 +90,7 @@
       &-module{
          & > div > .panel{
             border 0
+            box-shadow none
          }
       }
    }
@@ -97,7 +98,7 @@
 }
 
 .panel .table{
-   margin -15px 0 0 0
+   //margin -15px 0 0 0
    border 0
    td, th{
       &:first-child{
