--- a/src/Resources/views/Components/table.html.twig
+++ b/src/Resources/views/Components/table.html.twig
@@ -7,17 +7,19 @@
 
     <div class="panel-body">
         <table class="table table-bordered table-striped table-hover">
-            <thead>
-            <tr>
-                {% for column in component.columns %}
-                    {% if column == '.' %}
-                        <th style="width:1%"></th>
-                    {% else %}
-                        <th>{{ column }}</th>
-                    {% endif %}
-                {% endfor %}
-            </tr>
-            </thead>
+            {% if component.columns %}
+                <thead>
+                <tr>
+                    {% for column in component.columns %}
+                        {% if column == '.' %}
+                            <th style="width:1%"></th>
+                        {% else %}
+                            <th>{{ column }}</th>
+                        {% endif %}
+                    {% endfor %}
+                </tr>
+                </thead>
+            {% endif %}
             <tbody></tbody>
         </table>
     </div>
