--- a/assets/css/admin/#body.styl
+++ b/assets/css/admin/#body.styl
@@ -27,6 +27,16 @@ include-font('Proxima Nova', proxima_nova_light_italic, 300, italic)
    font-weight normal
    color #999
    margin-left .75em
+   display inline-block
+
+   .checkbox{
+      margin 0 0 0 10px
+      display inline-block
+
+      input{
+         margin-top 1px
+      }
+   }
 }
 
 .table-row-visible{
