--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 
 
+    {{ render(controller('CreonitAdminBundle:Plugin:injection', {block: 'head'})) }}
+
 
 </head>
 <body>
