--- a/assets/css/admin/components.styl
+++ b/assets/css/admin/components.styl
@@ -167,7 +167,17 @@
    /.component-editor .component & {
       border 1px solid #ddd
       border-radius 3px
+   }
 
+   &.is-error{
+      color #d9534f
 
+      i{
+         margin-right 10px
+      }
+
+      &:after{
+         display none
+      }
    }
 }
