--- a/src/Resources/views/Layout/sidebar.html.twig
+++ b/src/Resources/views/Layout/sidebar.html.twig
@@ -16,7 +16,7 @@
         {% if module.isVisible %}
             <li {{ module.isActive ? 'class="active"' }}>
                 <a href="{{ url('creonit_admin_module', {module: module.getUri}) }}">
-                    <i class="{{ module.getIcon }}"></i>
+                    <i class="fa fa-{{ module.getIcon }}"></i>
                     <span>{{ module.getTitle }}</span>
                 </a>
             </li>
