--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -23,6 +23,9 @@
 
     {{ render(controller('CreonitAdminBundle:Plugin:injection', {block: 'head'})) }}
 
+    <script>
+        {{ render(controller('CreonitAdminBundle:Plugin:injection', {block: 'head_script'})) }}
+    </script>
 
 </head>
 <body>
