+component.close() +.table tr.deactive

--- a/assets/css/admin/components.styl
+++ b/assets/css/admin/components.styl
@@ -62,7 +62,8 @@
 }
 
 
-.table tbody tr.nodrop{
+
+.table tbody tr.nodrop, .table tbody tr.deactive{
    opacity .3
 }
 
@@ -181,3 +182,4 @@
       }
    }
 }
+
