--- a/assets/css/admin/components.styl
+++ b/assets/css/admin/components.styl
@@ -33,7 +33,7 @@
    &-sort{
       visibility hidden
       flex 0 0 auto
-      margin 0 5px
+      margin 0 0 0 5px
       padding 0 5px
       cursor move
       color #ccc
@@ -53,6 +53,7 @@
    &-options{
       flex 1 0 auto
       visibility hidden
+      margin 0 0 0 5px
 
       /.table:not(.sorting) tr:hover & {
          visibility visible
