Убраны иконки "Ionicons" за ненадобностью. Font Awesome подгружается локально. Добавлены места для вставки кода sidebar_before_menu, sidebar_after_menu.

--- a/src/Resources/views/Layout/sidebar.html.twig
+++ b/src/Resources/views/Layout/sidebar.html.twig
@@ -12,6 +12,8 @@
         </a>
     </li>
 
+    {{ render(controller('CreonitAdminBundle:Plugin:injection', {block: 'sidebar_before_menu'})) }}
+
     {% for module in admin.getModules %}
         {% if module.isVisible and module.checkPermission(app.user) %}
             <li {{ module.isActive ? 'class="active"' }}>
@@ -23,4 +25,7 @@
         {% endif %}
 
     {% endfor %}
+
+    {{ render(controller('CreonitAdminBundle:Plugin:injection', {block: 'sidebar_after_menu'})) }}
+
 </ul>
