--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -15,11 +15,7 @@
     {% endblock %}
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-
+    <link rel="stylesheet" href="{{ asset('bundles/creonitadmin/css/font-awesome.min.css') }}">
 
     {{ render(controller('CreonitAdminBundle:Plugin:injection', {block: 'head'})) }}
 
